исправляет ошибку в выводе комментариев

--- a/index.html
+++ b/index.html
@@ -207,6 +207,18 @@
     </a>
   </template>
 
+  <!-- Шаблон комментария под большим изображением -->
+  <template id="comment">
+    <li class="social__comment">
+      <img
+          class="social__picture"
+          src=""
+          alt=""
+          width="35" height="35">
+      <p class="social__text"></p>
+  </li>
+  </template>
+
   <!-- Сообщение с ошибкой загрузки изображения -->
   <template id="error">
     <section class="error">
