добавляет макс длину комментария в форму

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег">
                   </div>
                   <div class="img-upload__field-wrapper">
-                    <textarea maxlength="140" class="text__description" name="description" placeholder="Ваш комментарий..."></textarea>
+                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..." data-pristine-maxlength="140" data-pristine-maxlength-message="Комментарий не может быть длиннее 140 символов"></textarea>
                   </div>
                 </fieldset>
 
