--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
 <script src="vendor/pristine/pristine.min.js"></script>
 <script src="vendor/nouislider/nouislider.js"></script>
 <script src="./js/function.js"></script>
+<script src="./js/form.js"></script>
+
 <script src="./js/main.js" type="module"></script>
 </body>
 </html>
