вносит правки по комментариям

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   </div>
 
                   <!-- Изменение глубины эффекта, накладываемого на изображение -->
-                  <fieldset class="img-upload__effect-level">
+                  <fieldset class="img-upload__effect-level effect-level">
                     <input class="effect-level__value" type="number" step="any" name="effect-level" value="">
                     <div class="effect-level__slider"></div>
                   </fieldset>
@@ -67,7 +67,7 @@
                 </div>
 
                 <!-- Наложение эффекта на изображение -->
-                <fieldset class="img-upload__effects  effects">
+                <fieldset class="img-upload__effect-level effects">
                   <ul class="effects__list">
                     <li class="effects__item">
                       <input type="radio" class="effects__radio  visually-hidden" name="effect" id="effect-none" value="none" checked>
